# sql_parser

./: Cargo.toml  LICENSE  README.md  coverage.sh
.github/workflows/: rust.yml
benches/: parser.rs
src/: error.rs  keyword.rs  lexer.rs  lib.rs  parser.rs
src/dialect/: dialect_trait.rs  mod.rs
src/postgresql/: common.rs  keyword.rs  lexer.rs  mod.rs  select.rs  statement.rs  token.rs
